--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,15 +23,24 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
+                <form class="" onsubmit="return client.handleSubmit(event)">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input type="submit" name="" value="submit" onclick="return client.handleSubmit(event)" onsubmit="return client.handleSubmit(event)">
                 </form>
             <section>
 
             <section>
                 <strong>Form Results:</strong>
                 <div id="results"></div>
+            </section>
+            <section>
+                <form class="" onsubmit="return client.handleAPIRequest(event)">
+                    <input type="submit" name="get_weather_data_btn" value="Get Weather Data for Zip: 19081" onclick="return client.handleAPIRequest(event)">
+                </form>
+            <section>
+            <section>
+                <strong>Weather API Results:</strong>
+                <div id="api_results"></div>
             </section>
         </main>
 
